# pick-and-place

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md
config/: README.md
mesh_optimization/: .gitignore  README.md  pyproject.toml
mesh_optimization/scripts/: simplification.py  simplify_generic_meshes.py  simplify_meshes.py
py/: .gitignore  pyproject.toml
py/curricula/: pick_place.yaml
py/scripts/: accumulate_wrist_panorama.py  backfill_episode_pose_metadata.py  backfill_final_placement_metadata.py  bench_throughput.py  calibrate_camera_intrinsics.py  calibrate_joint_zeros.py  calibrate_robot_dynamics.py  camera_fps_probe.py  capture_rest_pose.py  check_calibration.py  check_rl_env.py  combine_datasets.py  combine_policy_run_videos.py  combine_real_episode_videos.py  compare_camera_extrinsics.py  consolidate_datasets.py  convert_dataset_resolution.py  convert_dataset_to_square.py  diagnose_cube_tracking.py  distill_grasp_policy.py  dppo_policy_server.py  eval_policy.py  eval_policy_sim.py  eval_rl_hover.py  eval_rl_policy.py  eval_scripted_parallel.py  eval_vla_val_loss.py  export_camera_calibrations.py  export_diffusion_policy_dataset.py  export_dppo_dataset.py  export_episode_rolls.py  export_generic_robot.py  export_policy_run_shot.py  export_random_policy.py  export_sim_real_pairs.py  fit_joint_zeros.py  fit_pan_zero.py  fit_sag.py  generate_apriltags.py  generate_architecture_figure.py  (+47 more)
py/scripts/hackathon/: convert_dataset_to_square.py  push_dataset_to_hub.py  real.py  record_sim.py  sim.py
py/tests/: conftest.py  test_apriltag_textures.py  test_builder.py  test_cam_align_solve.py  test_camera_extrinsics.py  test_cube_detection.py  test_curriculum.py  test_detector_process.py  test_diffusion_policy_dataset.py  test_domain_randomization.py  test_dppo_dataset.py  test_dppo_policy.py  test_executor.py  test_export.py  test_make_domain_randomization_grid.py  test_miscalibration.py  test_overhead_localization.py  test_physical_collection.py  test_physical_rig.py  test_pick_cube.py  test_pick_place_env.py  test_policy.py  test_policy_controllers.py  test_policy_evaluation.py  test_policy_real.py  test_policy_recording.py  test_policy_sim.py  test_record_sim.py  test_recording.py  test_recovery_trajectory.py  test_rl_contract.py  test_scene.py  test_scripted_policy.py  test_target_plate_yaw.py  test_train_rl_hover.py  test_trajectory.py  test_visual_servo.py  test_vla.py
(+210 files in other folders)
