[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-optimization"
version = "0.0.0"
dependencies = [
    "mujoco",
    "numpy>=2.0",
    "pymeshlab>=2023.12",
    "robot_descriptions",
    "tqdm>=4.67",
    "trimesh[easy]>=4.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
