[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pick-and-place"
version = "0.0.0"
dependencies = [
    "fpdf",
    "gymnasium",
    "imageio[ffmpeg]",
    "lerobot[feetech,smolvla]",
    "matplotlib",
    "mujoco",
    "numpy",
    "opencv-python",
    "pupil-apriltags",
    "scipy",
    "stable-baselines3",
    "tqdm",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pick_and_place = ["*.xml"]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.9.0",
]
