[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pick-and-place"
version = "0.0.0"
dependencies = [
    "fpdf",
    "gymnasium",
    "imageio[ffmpeg]",
    # 0.5.1 pins transformers==5.3.0; newer transformers break lerobot imports.
    "lerobot[feetech,smolvla]==0.5.1",
    "matplotlib",
    "mujoco",
    "numpy",
    "opencv-python",
    "pupil-apriltags",
    "robot_descriptions",
    "scipy",
    "stable-baselines3",
    "tqdm",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pick_and_place = ["*.xml"]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.9.0",
]
